--- a/index.html
+++ b/index.html
@@ -13,91 +13,98 @@
     <header id="cabecalho">
         <h1 id="titulo">O que eu aprendi na Trybe até agora</h1>
 
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="https://www.betrybe.com/" target="_blank">Trybe</a></li>
-                </ul>
-            </nav>
+        <nav>
+            <ul>
+                <li><a href="https://github.com/felipedclc" target="_blank">GitHub</a></li>
+                <li><a href="https://www.betrybe.com/" target="_blank">Trybe</a></li>
+                <li><a href="https://www.linkedin.com/in/felipe-de-carvalho-lopes-cardoso/" target="_blank">Linkedin</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
-    <img id="minha_foto" src="rsz_21perfil.png" alt="me">
-
-    <section id="listas">
-        <div id="aprendidas">
-            <h2>Lista de coisas aprendidas</h3>
-            <ol id="licoes_aprendidas">
-                <li>Fundamentos do desenvolvimento web.</li>
-                <li>Terminal linux.</li>
-                <li>Git.</li>
-                <li>GitHub.</li>
-                <li>Internet.</li>
-                <li>HTML.</li>
-                <li>CSS.</li>
-                <li>A importância das soft skills.</li>
-                <li>Administrar melhor o tempo.</li>
-                <li>Definir prioridades.</li>
-            </ol>
+    <main>
+        <div id="perfil">
+            <h2>Felipe de Carvalho Lopes Cardoso</h2>
+            <img id="minha_foto" src="rsz_21perfil.png" alt="me">
         </div>
 
-        <div id="aprender">
-            <h2>Lista de coisas que ainda vou aprender</h3>
-            <ul id="licoes_a_aprender">
-                <li>Javascript.</li>
-                <li>React.</li>
-                <li>Redux.</li>
-                <li>Git.</li>
-                <li>SQL.</li>
-                <li>Python.</li>
-                <li>SCRUM.</li>
-                <li>Soft skills.</li>
-                <li>Administrar melhor o tempo.</li>
-                <li>Definir prioridades.</li>
-            </ul>
-        </div>
-    </section>
+        <section id="listas">
+            <div id="aprendidas">
+                <h3>Lista de coisas aprendidas</h3>
+                <ol id="licoes_aprendidas">
+                    <li>Fundamentos do desenvolvimento web.</li>
+                    <li>Terminal linux.</li>
+                    <li>Git.</li>
+                    <li>GitHub.</li>
+                    <li>Internet.</li>
+                    <li>HTML.</li>
+                    <li>CSS.</li>
+                    <li>A importância das soft skills.</li>
+                    <li>Administrar melhor o tempo.</li>
+                    <li>Definir prioridades.</li>
+                </ol>
+            </div>
 
-    <article class="lado-esquerdo">
-        <h3>Coisas que eu estou aprendendo</h4>
-        <p>
-            Estou em um momento de transição de carreira, já tinha feito alguns cursos de programação e decidi ingressar
-            na escola Trybe. Tinha muitas expectativas e dúvidas antes de começar, mas agora com quase 1 mês de curso
-            sinto que fiz uma boa escolha, o dia a dia é bem corrido, cada dia tem matéria nova e temos que finalizar
-            tudo antes de começar o dia seguinte para não acumular.
-        </p>
-    </article>
+            <div id="aprender">
+                <h3>Lista de coisas que ainda vou aprender</h2>
+                    <ul id="licoes_a_aprender">
+                        <li>Javascript.</li>
+                        <li>React.</li>
+                        <li>Redux.</li>
+                        <li>Git.</li>
+                        <li>SQL.</li>
+                        <li>Python.</li>
+                        <li>SCRUM.</li>
+                        <li>Soft skills.</li>
+                        <li>Administrar melhor o tempo.</li>
+                        <li>Definir prioridades.</li>
+                    </ul>
+            </div>
+        </section>
 
-    <section class="lado-direito">
-        <aside>
-            <h3>Passagem sobre meu aprendizado</h4>
-            <p>
-                Ainda tenho muito a aprender, tanto em conhecimentos tecnicos e novas tecnologias como React e Python
-                como
-                em soft skills de como gerir o tempo e como se comportar em um ambiente de desenvolvimento.
-            </p>
-        </aside>
-    </section>
+        <article class="lado-esquerdo">
+            <h4>Coisas que eu estou aprendendo</h3>
+                <p>
+                    Estou em um momento de transição de carreira, já tinha feito alguns cursos de programação e decidi
+                    ingressar
+                    na escola Trybe. Tinha muitas expectativas e dúvidas antes de começar, mas agora com quase 1 mês de
+                    curso
+                    sinto que fiz uma boa escolha, o dia a dia é bem corrido, cada dia tem matéria nova e temos que
+                    finalizar
+                    tudo antes de começar o dia seguinte para não acumular.
+                </p>
+        </article>
 
-    <table border="1">
-        <tr>
-            <th>Reino</th>
-            <th>Filo</th>
-            <th>Subfilo</th>
-            <th>Classe</th>
-            <th>Subclasse</th>
-            <th>Ordem</th>
-        </tr>
-        <tr>
-            <td>Animalia</td>
-            <td>Arthropoda</td>
-            <td>Crustacea</td>
-            <td>Malacostraca</td>
-            <td>Hoplocarida</td>
-            <td>Stomatopoda</td>
-        </tr>
-    </table>
+        <section class="lado-direito">
+            <aside>
+                <h4>Passagem sobre meu aprendizado</h3>
+                    <p>
+                        Ainda tenho muito a aprender, tanto em conhecimentos tecnicos e novas tecnologias como React e
+                        Python
+                        como em soft skills de como gerir o tempo e como se comportar em um ambiente de desenvolvimento.
+                    </p>
+            </aside>
+        </section>
+
+        <table border="1">
+            <tr>
+                <th>Front-end</th>
+                <th>Back-end</th>
+            </tr>
+            <tr>
+                <td>HTML, CSS, JS</td>
+                <td>Python, NodeJS</td>
+            </tr>
+            <tr>
+                <td>React, Redux</td>
+                <td>SQL, MySQL</td>
+            </tr>
+        </table>
+    </main>
 
     <footer id="rodape">
+        <p>Todos direitos reservados</p>
     </footer>
 
 </body>
