--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Lessons Learned</title>
 </head>
 <body>
+    <header id="cabecalho">
+
+      <h1 id="titulo">Meus códigos não possuem erros, apenas emitem comportamentos aleatórios.</h1>   </header>
 <nav id="cabecalho" >
-    <header >
-    <h1 id="titulo"> Lições aprendidas na trybe</h1>
-    </header>
     <ul id="menu">
         <li>Home</li>
         <li>Login</li>
