--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header id="cabecalho">
 
-      <h1 id="titulo">Meus códigos não possuem erros, apenas emitem comportamentos aleatórios.</h1>   </header>
+      <h1 id="titulo">Minhas lições apreendidas.</h1>   </header>
 <nav id="cabecalho" >
     <ul id="menu">
         <li>Home</li>
