--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Lessons Learned</title>
 </head>
 <body>
-    <header id="cabecalho">
+    <header>
 
       <h1 id="titulo">Minhas lições apreendidas.</h1>   </header>
 <nav id="cabecalho" >
