fix title, style title

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <header>
+      <h1 id="titulo">Minhas lições apreendidas - meu titulo</h1>
+    </header>
 
-      <h1 id="titulo">Minhas lições apreendidas.</h1>   </header>
 <nav id="cabecalho" >
     <ul id="menu">
         <li>Home</li>
