--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1>
+        <h1 id="titulo">
             Lições aprendidas na Trybe
         </h1>
     </header>
@@ -51,9 +51,10 @@
                 </aside>
             </section>
         </div>
+        <footer id="rodape">
+            <p id="textrodape">Link para o meu perfil no <a href="https://github.com/ChrisMoura2000" target="_blank">GitHub</a>  </p>
+        </footer>
     </main>
-    <footer id="rodape">
-        <p>Link para o meu perfil no <a href="https://github.com/ChrisMoura2000" target="_blank" rel="external">GitHub</a></p>
-    </footer>
+    
 </body>
 </html>
