--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Lessons Learned</title>
 </head>
 <body>
-    <header>
+    <header id="cabecalho">
       <h1 id="titulo">Minhas lições apreendidas - meu titulo</h1>
     </header>
 
-<nav id="cabecalho" >
+<nav>
     <ul id="menu">
         <li>Home</li>
         <li>Login</li>
