--- a/index.html
+++ b/index.html
@@ -8,27 +8,26 @@
     </head>
     <body>
         <header id="cabecalho">
-            <h1 id="titulo">Primeiro Projeto &#x1F680;</h1>
-            <nav id="headNav">
-                <table>
-                    <tr>
-                        <td><a href="#main">Home</a></td>
-                        <td><a href="#rodape">Reference</a></td>
-                        <td><a href="#rodape">Contact</a></td>
-                    </tr>
-                </table>
-            </nav>
+            <h1 id="titulo">Primeiro Projeto &#x1F680;</h1>            
         </header>
+        <nav id="headNav">
+            <table id="tableSize">
+                <tr>
+                    <td><a href="#main">Home</a></td>
+                    <td><a href="#rodape">Reference</a></td>
+                    <td><a href="#rodape">Contact</a></td>
+                </tr>
+            </table>
+        </nav>
         <main id="main">
             <article>
                 <p><img src="https://rodrigoneoex.github.io/atual.jpeg" alt="homem camisa verde" id="minha_foto" width="100px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat quam, at scelerisque ante posuere a. Vestibulum eu dapibus felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium felis ac odio faucibus imperdiet. Nunc tristique, sem ac commodo imperdiet, purus orci maximus elit, ac lacinia arcu nisi in metus. Vivamus congue enim orci, vel tristique orci pharetra non.</p>
             </article>
-            <aside>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat</p>
+            <aside>               
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat <img src="https://julianaconstantino.files.wordpress.com/2011/08/lorem-ipsum.jpeg" alt="lorem ipsum" id="lorem" width="200px"></p>
             </aside>
-                <div id="sectionLearn">
-                    <section>
-                        <h2>Lições Aprendidas</h2>
+                <section id="sectionLearn">
+                    <h2>Lições Aprendidas</h2>
                         <ol id="licoes_aprendidas">
                             <li>Git</li>
                             <li>GitHub</li>
@@ -41,9 +40,9 @@
                             <li>Hardskills</li>
                             <li>Bash</li>
                         </ol>
-                    </section>
-                    <section>
-                        <h2>Lições a Aprender</h2>
+                </section>
+                <section id="sectionUnlearned ">
+                    <h2>Lições a Aprender</h2>
                         <ul id="licoes_a_aprender">
                             <li>sao</li>
                             <li>tantas</li>
@@ -56,14 +55,11 @@
                             <li>ou</li>
                             <li>enumerar</li>
                         </ul>
-                    </section>
-                </div>
+                </section>               
             </main>
         </body>
         <footer id="rodape">
             <p><a href="https://www.lipsum.com/" target="_blank">Gerador de Textos</a></p>
-            <p>&#x1F4EA;ehauehuae@heau.com</p>
-            <p>&#x1F4F1;1215 16841 6841</p>
-            <p>Powered by: Rodrigo Camargo</p>
+            <p>&#x1F4EA;ehauehuae@heau.com / &#x1F4F1;1215 16841 6841 / Powered by: Rodrigo Camargo</p>
         </footer>
         </html>
