--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                 <article class="lado-esquerdo">
                     <h1>O que eu aprendi até aqui</h1>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Proin fermentum quam augue, sit amet imperdiet risus interdum luctus.
-                        Phasellus eu sollicitudin odio, nec vehicula nulla. Vivamus rutrum nulla non eros porttitor, sed elementum felis faucibus. 
-                        Integer gravida eleifend aliquet. Morbi vestibulum volutpat neque, at fermentum dolor posuere vitae. Integer molestie ipsum a nisl fringilla eleifend. 
-                        Mauris sit amet arcu at metus commodo aliquet id eget justo. 
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Proin fermentum quam augue, sit amet imperdiet risus interdum luctus.
+                    Phasellus eu sollicitudin odio, nec vehicula nulla. Vivamus rutrum nulla non eros porttitor, sed elementum felis faucibus. 
+                    integer gravida eleifend aliquet. Morbi vestibulum volutpat neque, at fermentum dolor posuere vitae. Integer molestie ipsum a nisl fringilla eleifend. 
+                    Mauris sit amet arcu at metus commodo aliquet id eget justo. 
                     </p>
                 </article>
             </section>
@@ -81,10 +81,10 @@
                 <aside class="lado-direito">
                     <h1>Minha jornada como DEV</h1>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                         Proin fermentum quam augue, sit amet imperdiet risus interdum luctus. 
-                         Phasellus eu sollicitudin odio, nec vehicula nulla. 
-                         Vivamus rutrum nulla non eros porttitor, sed elementum felis faucibus. 
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Proin fermentum quam augue, sit amet imperdiet risus interdum luctus. 
+                    Phasellus eu sollicitudin odio, nec vehicula nulla. 
+                    Vivamus rutrum nulla non eros porttitor, sed elementum felis faucibus. 
                     </p>
                 </aside>
             </section>
