Estilo no header, nav

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="cabecalho">
@@ -12,12 +14,12 @@
             <h1 id="titulo">Trilha de Carreira-Trybe</h1>
         </section>
     </header>
-    <nav class="navegar">
-        <ul>
-            <li id="nav"><a href="https://www.google.com.br/" target="_blank">Home</a></li>
-            <li id="nav"><a href="https://www.google.com.br/" target="_blank">Sobre</a></li>
-            <li id="nav"><a href="https://www.google.com.br/" target="_blank">Contato</a></li>
-            <li id="nav"><a href="https://www.google.com.br/" target="_blank">Jobs</a></li>
+    <nav id="navegar">
+        <ul class="nav-links">
+            <li><a href="https://www.google.com.br/" target="_blank">Home</a></li>
+            <li><a href="https://www.google.com.br/" target="_blank">Sobre</a></li>
+            <li><a href="https://www.google.com.br/" target="_blank">Contato</a></li>
+            <li><a href="https://www.google.com.br/" target="_blank">Jobs</a></li>
             
         </ul>
     </nav>
