--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
         <header id="cabecalho">
             <h1 id="titulo">[F]elipe Rodrigues Pimentel</h1>
             <nav id="navigation">
-                <ul id="menu">
-                    <li><a class="active" href="">PERFIL</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=vDDkrrGMZfc" target="_blank">LINK</a></li>
-                </ul>
+                <a class="botaoAtivo" href="">PERFIL</a><a class="botao" href="https://www.youtube.com/watch?v=vDDkrrGMZfc" target="_blank">LINK</a>
             </nav>
         </header>
     </body>
