--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
   <header id="cabecalho">
     <h1 id="titulo">Perycles F.</h1>
-    <ul>
-      <a href="https://github.com/PeryclesReis" target="_blank"><p class="fab fa-github-alt"></p></a>
-      <a href="https://www.linkedin.com/in/perycles-floriano-45b177155/" target="_blank"><p class="fab fa-linkedin"></p></a>
-      <a href="https://www.instagram.com/peryclesreis/" target="_blank"><p class="fab fa-instagram"></p></a>
-    </ul>
+    <nav>
+      <ul>
+        <a href="https://github.com/PeryclesReis" target="_blank"><p class="fab fa-github-alt"></p></a>
+        <a href="https://www.linkedin.com/in/perycles-floriano-45b177155/" target="_blank"><p class="fab fa-linkedin"></p></a>
+        <a href="https://www.instagram.com/peryclesreis/" target="_blank"><p class="fab fa-instagram"></p></a>
+      </ul>
+    </nav>
   </header>
 
   <main id="content">
