--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Projeto 1</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<header><h1> Projeto 1 - Lições aprendidas</h1>
+<header id="cabeçalho"><h1> Projeto 1 - Lições aprendidas</h1>
+<img src ="oie_7mbgcqpjn3sh.jpg" id="foto">
     <nav>
-        
+
     </nav>
 </header>
 <body>
     <article>
-        iurhfdnjkasdkj
     </article>
 
 
