alteracoes de id e classe

--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <title>Projeto 1</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<header id="cabeçalho"><h1> Projeto 1 - Lições aprendidas</h1>
-<img src ="oie_7mbgcqpjn3sh.jpg" id="foto">
+<header id="cabecalho"><h1> Projeto 1 - Lições aprendidas</h1>
     <nav>
 
     </nav>
 </header>
 <body>
+    <img src ="oie_7mbgcqpjn3sh.jpg" class="foto">
+
     <article>
     </article>
 
 
 
-    <footer id ="rodape">
+    <footer class ="rodape">
 
     </footer>
 </body>
