--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <a>
         <img id="minha_foto" src="minha_foto.png" alt="Foto de Danrlley Rodrigues">
     </a>
-        <article>
+        <article class="lado-esquerdo">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque viverra ultrices enim et pretium. Nulla facilisi. Etiam sed pharetra elit. Donec varius ex sit amet quam finibus lacinia. Pellentesque at tristique metus, at auctor ipsum. Sed ut luctus dui. Cras commodo justo eu lacus accumsan, at aliquet velit tempor. Duis luctus accumsan neque id viverra. Nullam nec justo interdum, ullamcorper nulla id, mollis nulla.
         </article>
-        <aside>
+        <aside class="lado-direito">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque viverra ultrices enim et pretium. Nulla facilisi. Etiam sed pharetra elit.
         </aside>
     <section>
