add letter spacing

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             </table>
         </nav>
         <main id="main">
-            <article>
+            <article class="lado-esquerdo">
                 <p><img src="https://rodrigoneoex.github.io/atual.jpeg" alt="homem camisa verde" id="minha_foto" width="100px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat quam, at scelerisque ante posuere a. Vestibulum eu dapibus felis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium felis ac odio faucibus imperdiet. Nunc tristique, sem ac commodo imperdiet, purus orci maximus elit, ac lacinia arcu nisi in metus. Vivamus congue enim orci, vel tristique orci pharetra non.</p>
             </article>
             <aside>               
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat <img src="https://julianaconstantino.files.wordpress.com/2011/08/lorem-ipsum.jpeg" alt="lorem ipsum" id="lorem" width="200px"></p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat <img src="https://julianaconstantino.files.wordpress.com/2011/08/lorem-ipsum.jpeg" alt="lorem ipsum" id="lorem" width="300px"></p>
             </aside>
-                <section id="sectionLearn">
+                <section class="lado direito">
                     <h2>Lições Aprendidas</h2>
                         <ol id="licoes_aprendidas">
                             <li>Git</li>
@@ -41,7 +41,7 @@
                             <li>Bash</li>
                         </ol>
                 </section>
-                <section id="sectionUnlearned ">
+                <section>
                     <h2>Lições a Aprender</h2>
                         <ul id="licoes_a_aprender">
                             <li>sao</li>
