--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </main>
     <section>
       <article>
-        <p>
+        <p class="lado-esquerdo">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry. Lorem Ipsum has been the industry's standard dummy text ever
           since the 1500s, when an unknown printer took a galley of type and
@@ -78,7 +78,7 @@
       </article>
 
       <aside>
-        <p>
+        <p class="lado-direito">
           It has survived not only five centuries, but also the leap into
           electronic typesetting, remaining essentially unchanged. It was
           popularised in the 1960s with the release of Letraset sheets
@@ -86,6 +86,11 @@
         </p>
       </aside>
     </section>
-    <footer id="rodape"></footer>
+    <footer id="rodape">
+      <p>
+        Desenvolvido por Gabriel Castro durante o curso de desenvolvimento de
+        software na Trybe, Todos os direitos reservados ©.
+      </p>
+    </footer>
   </body>
 </html>
