--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
             </ul>
         </div>
         <section id="artigos">
-            <article class="lado_direito">
+            <article class="lado-direito">
                 <p>
                     Durante as últimas semanas tenho aprimorado meus conhecimentos com desenvolvimento de software e quem diria que aquela pessoa que nunca havia mexido em um linux ou com git agora estaria usando diariamente e conseguindo entender o que estava sendo feito. Incrível pensar como minha vida mudou criando e sabendo como são criados sites e elementos que permeiam nosso dia a dia.
                 </p>
             </article>
-            <aside class="lado_esquerdo">
+            <aside class="lado-esquerdo">
                 <p>
                     Se servir de inspiração para outros, olhem o código, apertem f12, inspecionem cada página que acharem atrativa, foi uma das formas que usei para me motivar.
                 </p>
