Alterado a fonte do body, texto do artigo

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         </section>
         <article>
             <p>
-                Crie um artigo sobre seu aprendizado
+                Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizadoCrie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizadoCrie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizadoCrie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizadoCrie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizadoCrie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizadoCrie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizadoCrie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizadoCrie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado
             </p>
             
         </article>
         
         <aside>
             <p>
-                Crie uma seção que conta uma passagem sobre seu aprendizado
+                Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizadoCrie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizadoCrie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizadoCrie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizadoCrie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizadoCrie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizadoCrie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizadoCrie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizadoCrie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado Crie um artigo sobre seu aprendizado
             </p>
         </aside>
     </main>
