--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
                     Apesar do pouco tempo de curso, já aprendi um pouco sobre Unix, Bash, Softskills, HTML, CSS e HTML Semântico. Espero nos próximos meses aperfeiçoar os conhecimento que já adquiri e aprender muitos outros!!! #gotrybers
                 </aside>
             </section>
+            <table>
+                <tr><th colspan="5">Plataformas usadas para a facilitação do aprendizado</th></tr>
+                <tr>
+                    <td>Slack</td>
+                    <td>Zoom</td>
+                    <td>Plataforma Trybe</td>
+                    <td>Slido</td>
+                    <td>Kahoot!</td>
+                </tr>
+            </table>
       </main>
       <footer id="rodape">
           <p>Todos os direitos reservados, Raphael.</p>
