Adicionar tabela a pagina

--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
                 <li>Context API</li>
                 <li>React Hooks</li>
             </ul>
+            <p><strong>GOSTO DE:</strong>  jogar xadrez</p>
+            <table id="chess">
+                <thead>
+                    <th><img class="chees-image" src="/Images/Knight.png" alt="knight image"></th>
+                    <th></th>
+                </thead>
+                <tbody>
+                    <td></td>
+                    <td><img class="chees-image" src="/Images/king.jpg" alt="king image"></td>
+                </tbody>
+            </table>
         </section>
 
         <article id="artigo" class="fundos_secoes exceto_secoes">
