tentando mexer na fonte

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
         <li>lição 05</li>
     </ul>
     </section>
+    <section>
+    <aside> texto genericotexto genericotexto genericotexto generico texto genericotexto genericotexto genericotexto genericotexto genericotexto generico
+    </aside>
+    </section>
  
     
    
