tentando tabela de novo

--- a/index.html
+++ b/index.html
@@ -29,6 +29,31 @@
         </p>
     </article>
     <a href="https://www.uol.com.br/" target="_blank "> minha fonte de noticias preferida</a>
+    <section>
+        <h3>tabela generica</h3>
+    <table>
+      <tr>
+        <th>dado 01</th>
+        <th>dado 02</th> 
+        <th>dado 03</th>
+      </tr>
+      <tr>
+        <td>dado 01</td>
+        <td>dado 01</td>
+        <td>dado 03</td>
+      </tr>
+      <tr>
+        <td>dado 01</td>
+        <td>dado 02</td>
+        <td>dado 03</td>
+      </tr>
+      <tr>
+        <td>dado 01</td>
+        <td> dado 02</td>
+        <td>dado 03</td>
+      </tr>
+    </table>
+    </section>
     </section>
     <section></section>
     <ol id="licoes_aprendidas">
