--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <aside>               
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur consequat <img src="https://julianaconstantino.files.wordpress.com/2011/08/lorem-ipsum.jpeg" alt="lorem ipsum" id="lorem" width="300px"></p>
             </aside>
-                <section class="lado direito">
+                <section class="lado-direito">
                     <h2>Lições Aprendidas</h2>
                         <ol id="licoes_aprendidas">
                             <li>Git</li>
