tentando arrumar o footer

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
  
     
    
-    <footer id="rodapé">Todos os direitos reservados Jorge Ramires</footer>
+    <footer id="rodape">Todos os direitos reservados Jorge Ramires</footer>
 
     </main>
 </body>
