Adicionando section sobre mim

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
           >Meu Linkedin 👈</a
         >
       </div>
+      <section id="sobre-mim">
+        <h2>Gabriel Castro</h2>
+        <p>Estudante de Desenvolvimento de Software na Trybe.</p>
+        <i>Manaus, AM.</i>
+      </section>
 
       <section>
         <table>
