--- a/index.html
+++ b/index.html
@@ -1,68 +1,67 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lessons Learned</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <header id="cabecalho">
-    <h1 id="titulo">Lessons Learned - Trybe</h1>
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#home">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <img id="minha_foto" src="/natalianegreiros.jpeg" alt="Foto de Natália">
-  <h2>Lições</h2>
-  <ol id="licoes_aprendidas">
-    <li>Unix</li>
-    <li>Bash</li>
-    <li>GIT</li>
-    <li>Github</li>
-    <li>Internet</li>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>Zoom</li>
-    <li>Slack</li>
-    <li>Empatia</li>
-  </ol>
-  <article class="lado-esquerdo">
-    <header>
-      <h2>Minha evolução</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum itaque sed quis, consectetur dolorum, nostrum officia quo minus, tempora id deleniti. Labore voluptate repellat deleniti voluptas quia. Quibusdam, dolor blanditiis!
-      Aut quibusdam libero asperiores assumenda tenetur blanditiis odit earum harum, aliquid qui corporis nesciunt impedit consequuntur voluptates, reiciendis error vitae dolores! Nobis recusandae delectus debitis?</p>
+  <div class="container">
+    <header id="cabecalho">
+      <h1 id="titulo">Projeto Lições Aprendidas</h1>
+      <nav>
+        <a href="https://www.betrybe.com">Trybe</a>
+      </nav>
     </header>
-  </article>
-  <ul id="licoes_a_aprender">
-    <h2>Ainda falta</h2>
-    <li>Lógica de Programação</li>
-    <li>Javascript</li>
-    <li>DOM</li>
-    <li>Forms</li>
-    <li>CSS - Flexbox</li>
-    <li>CSS - Responsivo</li>
-    <li>Testes</li>
-    <li>React</li>
-    <li>Python</li>
-    <li>Metodolodias Ágeis</li>
-  </ul>
-  </main>
-  <section class="lado-direito">
+    <main class="content">
+      <section class="photo">
+        <img id="minha_foto" src="/natalianegreiros.jpeg" alt="Foto de Natália">
+      </section>
+      <section class="lado-esquerdo">
+        <article>
+          <h2>Meu aprendizado</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo nihil ea praesentium dolorum, iste beatae, provident nam illo perspiciatis voluptate voluptas quos laborum. Itaque esse, exercitationem assumenda atque delectus quos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam velit possimus sunt cumque quis. Doloribus voluptatum eligendi neque temporibus, iste sunt beatae possimus placeat voluptate ducimus dolorum obcaecati nisi sit!</p>
+        </article>
+      </section>
+      <section class="licoes-aprendidas">
+        <ol id="licoes_aprendidas">
+          <h2>Lições aprendidas</h2>
+          <li>Unix</li>
+          <li>Bash</li>
+          <li>GIT</li>
+          <li>Github</li>
+          <li>Internet</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Zoom</li>
+          <li>Slack</li>
+          <li>Empatia</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+          <h2>Ainda falta</h2>
+          <li>Lógica de Programação</li>
+          <li>Javascript</li>
+          <li>DOM</li>
+          <li>Forms</li>
+          <li>CSS - Flexbox</li>
+          <li>CSS - Responsivo</li>
+          <li>Testes</li>
+          <li>React</li>
+          <li>Python</li>
+          <li>Metodolodias Ágeis</li>
+        </ul>
+      </section>
+    </main>
     <aside>
-      <h2>Meu aprendizado</h2>
+      <h2>Passagem sobre aprendizado</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam placeat impedit, tempora ullam quisquam cumque quod praesentium qui ducimus enim! Sit id suscipit odio eum magnam temporibus delectus inventore maiores.
     </p>
     </aside>
-  </section>
-  <footer id="rodape">
-    <a href="https://github.com/negres" target="_blank">Natália Negreiros</a>
-  </footer>
+    <footer>
+      <a href="https://github.com/negres">Github</a>
+      <a href="https://github.com/negres">Linkedin</a>
+    </footer>
+  </div>
 </body>
 </html>
