--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@
         </ul>
       </section>
     </main>
-    <aside>
-      <h2>Passagem sobre aprendizado</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam placeat impedit, tempora ullam quisquam cumque quod praesentium qui ducimus enim! Sit id suscipit odio eum magnam temporibus delectus inventore maiores.
-    </p>
-    </aside>
-    <footer>
-      <a href="https://github.com/negres">Github</a>
-      <a href="https://github.com/negres">Linkedin</a>
+    <section class="aside">
+      <aside>
+        <h2>Passagem sobre aprendizado</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam placeat impedit, tempora ullam quisquam cumque quod praesentium qui ducimus enim! Sit id suscipit odio eum magnam temporibus delectus inventore maiores.
+      </p>
+      </aside>
+    </section>
+    <footer id="rodape">
+      <a href="https://github.com/negres" target="_blank">Github</a>
+      <a href="https://github.com/negres" target="_blank">Linkedin</a>
     </footer>
   </div>
 </body>
