--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </ul>
       </section>
     </main>
-    <section class="aside">
+    <section class="lado-direito">
       <aside>
         <h2>Passagem sobre aprendizado</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam placeat impedit, tempora ullam quisquam cumque quod praesentium qui ducimus enim! Sit id suscipit odio eum magnam temporibus delectus inventore maiores.
