tentando alinhar lado a lado

--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
     
     <img src="jorge.jpg" id="minha_foto" alt="Jorge Ramires"  width="400px">
     <main> 
-    <section>
-    <article >
+    <div class="container"> <section>
+    <article class="item">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in rutrum augue, quis interdum eros. Vivamus quis nisi eget lorem efficitur faucibus vel id nunc. Nam tempus mollis elit at condimentum. Aenean lobortis id dui vel vestibulum. Donec a posuere neque. Morbi eget molestie ante, elementum vestibulum sapien. Maecenas vitae dapibus urna, ullamcorper vulputate dolor. Etiam sit amet ligula orci. Vivamus ultrices risus dui, in tincidunt leo imperdiet at. Sed sed massa congue ante bibendum feugiat.
-
         </p>
     </article>
-    <a href="https://www.uol.com.br/" target="_blank "> minha fonte de noticias preferida</a>
     <section>
+        <aside class="item"> texto genericotexto genericotexto genericotexto generico texto genericotexto genericotexto genericotexto genericotexto genericotexto generico
+        </aside>
+        </section>     
+        </div>
+        <section>
         <h2>tabela generica</h2>
     <table>
       <tr>
@@ -82,14 +85,11 @@
     </ul>
     </section>
     <section>
-    <aside> texto genericotexto genericotexto genericotexto generico texto genericotexto genericotexto genericotexto genericotexto genericotexto generico
+    <aside class="conteiner1"> texto genericotexto genericotexto genericotexto generico texto genericotexto genericotexto genericotexto genericotexto genericotexto generico
     </aside>
-    </section>
- 
-    
-   
-    <footer id="rodape">Todos os direitos reservados Jorge Ramires</footer>
-
+    </section>    
+    <footer id="rodape">Todos os direitos reservados Jorge Ramires
+    </footer>
     </main>
 </body>
 </html>
