--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
            <li><a href="">sobre</a></li>
         </ul>
       </nav>   
-
-    </header>
-    
-
-    
+    </header>       
     <img src="jorge.jpg" id="minha_foto" alt="Jorge Ramires"  width="400px">
+    <nav>
+    <a id="link_externo" href="https://www.uol.com.br/" target="_blank">Uol Noticias</a>
+      </nav>
     <main> 
-    <div class="container"> <section>
-    <article class="item">
+    <div class="container"> 
+        <section>
+          <article class="item">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in rutrum augue, quis interdum eros. Vivamus quis nisi eget lorem efficitur faucibus vel id nunc. Nam tempus mollis elit at condimentum. Aenean lobortis id dui vel vestibulum. Donec a posuere neque. Morbi eget molestie ante, elementum vestibulum sapien. Maecenas vitae dapibus urna, ullamcorper vulputate dolor. Etiam sit amet ligula orci. Vivamus ultrices risus dui, in tincidunt leo imperdiet at. Sed sed massa congue ante bibendum feugiat.
         </p>
     </article>
@@ -84,11 +84,7 @@
         <li>lição 05</li>
     </ul>
     </section>
-    <section>
-    <aside class="conteiner1"> texto genericotexto genericotexto genericotexto generico texto genericotexto genericotexto genericotexto genericotexto genericotexto generico
-    </aside>
-    </section>    
-    <footer id="rodape">Todos os direitos reservados Jorge Ramires
+     <footer id="rodape">Todos os direitos reservados Jorge Ramires
     </footer>
     </main>
 </body>
