--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <header id="cabecalho">
         <section>
-            <h1 id="titulo">Lições aprendidas - Trybe</h1>
+            <h1 id="titulo">Lições Aprendidas - Trybe</h1>
         </section>
         <nav>
-            <ul>
-                <li><a href="">home</a></li>
-                <li> <a href="">Login</a></li>
+            <ul class="menu-superior">
+                <li><a href="">Home</a></li>
+                <li><a href="">Login</a></li>
             </ul>
         </nav>
     </header>
@@ -22,8 +22,9 @@
         <img id="minha_foto" src="images\edisonps.jpg" alt="Imagem do Edison" width="300px">
 
         <section>
+            <h2>Lições</h2>
             <article>
-                <h2>Lições aprendidas</h2>
+                <h3>Aprendidas</h3>
                 <ol id="licoes_aprendidas">
                     <li>XXXXXXXXXX</li>
                     <li>XXXXXXXXXX</li>
@@ -38,7 +39,7 @@
                 </ol>
             </article>
             <article>
-                <h2>Lições a aprender</h2>
+                <h3>A Aprender</h3>
                 <ul id="licoes_a_aprender">
                     <li>XXXXXXXXXX</li>
                     <li>XXXXXXXXXX</li>
