--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto 1</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<header id="cabecalho"><h1> Projeto 1 - Lições aprendidas</h1>
-    <nav>
-
-    </nav>
-</header>
+    <header><h1> Projeto 1 - Lições aprendidas</h1>
+        <img src ="oie_7mbgcqpjn3sh.jpg" class="foto">
+    ￼    <nav>
+    ￼      <ul>
+        <li>sdkscm</li>
+        <li>oiefjkf</li>
+            </ul>
+    ￼    </nav>
+    ￼</header>
 <body>
-    <img src ="oie_7mbgcqpjn3sh.jpg" class="foto">
+    
 
     <article>
+        ocjdsn,dmsçdm
     </article>
 
 
 
+
+
+
     <footer class ="rodape">
+
 
     </footer>
 </body>
